# music-manager

./: pyproject.toml
music_manager/: create_playlist.py  move_to_album_subfolders.py  playlist_find_missing.py
music_manager/utilities/: __init__.py  arguments.py  constants.py  logging.py
