[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-manager"
version = "0.1.0"
authors = [
    { name = "Guillaume Tousignant", email = "moi_guillaume@hotmail.com" },
]
description = "Manages a music library"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["mutagen"]

[project.urls]
Homepage = "https://github.com/guillaumetousignant/music-manager"
Issues = "https://github.com/guillaumetousignant/music-manager/issues"

[project.optional-dependencies]
dev = ["ruff", "pyright"]
test = ["pytest"]

[project.scripts]
move-to-album-subfolders = "music_manager.move_to_album_subfolders:main"
create-playlist = "music_manager.create_playlist:main"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W6", "B", "I"]
unfixable = ["B"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["music_manager"]
